--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "awe-dnd": "^0.3.4",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.8.0",
+    "element-ui": "^2.14.1",
+    "js-cookie": "^2.2.1",
+    "mitt": "^2.1.0",
+    "mock": "^0.1.1",
+    "script-ext-html-webpack-plugin": "^2.1.5",
     "vue": "^2.6.11",
+    "vue-drag-it-dude": "^1.3.0",
+    "vue-drag-resize": "^1.4.2",
     "vue-router": "^3.2.0",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
